// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ConsentManager /> destinations default to true only when nothing is selected 1`] = `
Object {
  "customPreferences": Object {
    "advertising": false,
    "analytics": true,
    "functional": true,
  },
  "destinationPreferences": Object {
    "AdvertisingTool": false,
    "FunctionalTool": true,
    "Google Analytics": true,
    "MarketingTool": true,
  },
}
`;

exports[`<ConsentManager /> destinations defaults to true when nothing is selected 1`] = `
Object {
  "customPreferences": Object {
    "advertising": true,
    "analytics": true,
    "functional": true,
  },
  "destinationPreferences": Object {
    "AdvertisingTool": true,
    "FunctionalTool": true,
    "Google Analytics": true,
    "MarketingTool": true,
  },
}
`;

exports[`<ConsentManager /> maps destinations to preferences 1`] = `
Object {
  "customPreferences": Object {
    "advertising": false,
    "analytics": true,
    "functional": true,
  },
  "destinationPreferences": Object {
    "AdvertisingTool": false,
    "FunctionalTool": true,
    "Google Analytics": true,
    "MarketingTool": true,
  },
}
`;

exports[`<ConsentManager /> maps destinations to preferences when there are no destinations 1`] = `
Object {
  "customPreferences": Object {
    "advertising": false,
    "analytics": true,
    "functional": true,
  },
  "destinationPreferences": Object {},
}
`;

exports[`<ConsentManager /> renders correctly 1`] = `
<ConsentManagerBuilder
  initialPreferences={
    Object {
      "advertising": null,
      "analytics": null,
      "functional": null,
    }
  }
  mapCustomPreferences={[Function]}
  otherWriteKeys={Array []}
  shouldRequireConsent={[Function]}
  writeKey="sIoYsVoTTCBmrcs7yAz1zRFRGhAofBlg"
>
  <Component />
</ConsentManagerBuilder>
`;
